# mcu-fw-cpp

./: .gitignore  CMakeLists.txt  Debugging C++ ROM Execution.md  README.md  Runtime Kernel Development.md
cmake/: riscv32-toolchain.cmake
include/common/: bitflags.hpp  error.hpp  static_ref.hpp  types.hpp
rom/: CMakeLists.txt
rom/include/rom/: boot_status.hpp  cold_boot.hpp  device_ownership_transfer.hpp  fuse_layout.hpp  fuses.hpp  fw_boot.hpp  fw_hitless_update.hpp  i3c.hpp  image_verifier.hpp  lifecycle.hpp  otp.hpp  recovery.hpp  rom.hpp  rom_env.hpp  warm_boot.hpp
rom/include/rom/flash/: flash_partition.hpp  hil.hpp  memory.hpp
rom/src/: boot_status.cpp  cold_boot.cpp  device_ownership_transfer.cpp  fuse_layout.cpp  fuses.cpp  fw_boot.cpp  fw_hitless_update.cpp  i3c.cpp  image_verifier.cpp  lifecycle.cpp  otp.cpp  recovery.cpp  rom.cpp  rom_env.cpp  warm_boot.cpp
rom/src/flash/: flash_partition.cpp  hil.cpp  memory.cpp
romtime/: CMakeLists.txt
romtime/include/romtime/: mci.hpp  platform.hpp  romtime.hpp  soc_manager.hpp  static_ref.hpp
romtime/src/: mci.cpp  platform_host.cpp  platform_riscv32.cpp  romtime.cpp  soc_manager.cpp  static_ref.cpp
runtime/: CMakeLists.txt
runtime/kernel/: CMakeLists.txt
runtime/kernel/capsules/: CMakeLists.txt
runtime/kernel/capsules/include/capsules/: capsules.hpp  flash_partition.hpp  mailbox.hpp  mbox_sram.hpp  mci.hpp  mcu_mbox.hpp  system.hpp
runtime/kernel/capsules/src/: capsules.cpp  flash_partition.cpp  mailbox.cpp  mbox_sram.cpp  mci.cpp  mcu_mbox.cpp  system.cpp
runtime/kernel/components/: CMakeLists.txt
runtime/kernel/components/include/components/: components.hpp
runtime/kernel/components/src/: components.cpp  dma.cpp  doe.cpp  flash_partition.cpp  mailbox.cpp  mbox_sram.cpp  mci.cpp  mctp_driver.cpp  mcu_mbox.cpp  mock_mctp.cpp  mux_mctp.cpp  system.cpp
runtime/kernel/drivers/: CMakeLists.txt
runtime/kernel/drivers/doe/: doe.cpp
runtime/kernel/drivers/flash/: flash.cpp
runtime/kernel/drivers/i3c/: i3c.cpp
runtime/kernel/drivers/mcu_mbox/: mcu_mbox.cpp
runtime/kernel/veer/: CMakeLists.txt
runtime/kernel/veer/include/veer/: veer.hpp
runtime/kernel/veer/src/: chip.cpp  interrupt.cpp  veer.cpp
